2021-10-26         [RELEASE] Release of filefill 4.0.1 (Nicole Cordes)
2021-10-26 50c7a0f [BUGFIX] Set correct TYPO3 dependency in ext_emconf.php (Nicole Cordes)

2021-10-25         [RELEASE] Release of filefill 4.0.0 (Nicole Cordes)
2021-10-25 20f1caf [TASK] Raise PHP compatibility to 8.0 (Nicole Cordes)
2021-10-25 66cc838 [TASK] Raise compatibility to TYPO3 11.5 (Nicole Cordes)
2021-07-09 d2aa98d Fix misspelling (Nicole Cordes)
2021-07-07 217e0af [DOCS] Add information how to start file fetching (Sybille Peters)
2021-05-20 4ebea41 Update README.md (Franz Kugelmann)
2020-12-16 906279a [BUGFIX] Use baseUrl from configuration in DomainResourceRepository (Nicole Cordes)
2020-12-16 35f7880 [TASK] Update supporting files to EXT:my_skeleton 0.5.2 (Nicole Cordes)
2020-11-27 55bb6a0 [TASK] Clarify mutual exclusive configuration (Mathias Brodala)
2020-11-03 57ce74b [TASK] Update supporting files to EXT:my_skeleton 0.5.1 (Nicole Cordes)
2020-09-05 663aba8 [TASK] Add debug information to README.md (Nicole Cordes)
2020-09-04 6030551 [FEATURE] Add logger support (Nicole Cordes)
2020-09-05 a0b1c28 [BUGFIX] Prevent double slashes on domain urls (Nicole Cordes)
2020-09-05 b2aab97 [TASK] Remove deprecated sys_domain support (Nicole Cordes)
2020-09-05 4fc31ce [BUGFIX] Prevent driver recursion (Nicole Cordes)
2020-09-05 4853683 [TASK] Update supporting files to EXT:my_skeleton 0.4.0 (Nicole Cordes)
2020-06-16 80b4565 [TASK] Switch from slots to event listeners (Nicole Cordes)
2020-06-16 f9e8482 [TASK] Raise extension version to 4.x (Nicole Cordes)

2020-12-16         [RELEASE] Release of filefill 3.3.1 (Nicole Cordes)
2020-12-16 e4c4d30 [BUGFIX] Use baseUrl from configuration in DomainResourceRepository (Nicole Cordes)
2020-12-16 8288829 [TASK] Update supporting files to EXT:my_skeleton 0.4.2 (Nicole Cordes)
2020-11-27 bf286f6 [TASK] Clarify mutual exclusive configuration (Mathias Brodala)
2020-11-03 dc6ffaa [TASK] Update supporting files to EXT:my_skeleton 0.4.1 (Nicole Cordes)
